# durable-code-test

./: .env.example  .pre-commit-config.yaml  .thailint.yaml  AGENTS.md  CLAUDE.md  Makefile  Makefile.infra  Makefile.lint  justfile
.ai/: index.yaml  index_expanded.md  layout.yaml
.ai/docs/: BRANCH_PROTECTION.md  DOCKER_EXECUTION_STANDARDS.md  DUAL_ARCHITECTURE_README.md  INFRASTRUCTURE_PRINCIPLES.md  LINTING_ENFORCEMENT_STANDARDS.md  REPOSITORY_FOR_AI.md  STANDARDS.md  TERRAFORM_STANDARDS.md  THAILINT_INTEGRATION.md
.ai/features/: design-linters.md  development-tooling.md  error-boundaries.md  infrastructure-management.md  terraform-conditional-deployment.md  testing-framework.md  web-application.md
.ai/howto/: create-roadmap-item.md  how-to-fix-linting-errors.md  how-to-refactor-for-quality.md
.ai/howtos/: complete-debugging-guide.md  create-custom-linter.md  deploy-application.md  develop-multiple-branches.md  github-merge-workflow.md  how-to-fix-linting-errors.md  how-to-refactor-for-quality.md  how-to-write-file-headers.md  infrastructure-deployment.md  manage-infrastructure.md  manage-terraform-deployment-scopes.md  run-linting.md  run-tests.md  setup-development.md  setup-direnv.md  terraform-workspaces-operations.md  terraform-workspaces.md  test-page-content.md
.ai/runbooks/: cost-optimization.md
.ai/troubleshooting/: terraform-workspaces.md
.claude/commands/: reconcile.md
.docker/: README.md
.docker/compose/: app.yml
.docker/dockerfiles/: Dockerfile.backend  Dockerfile.frontend
.github/workflows/: deploy.yml  down.yml  lint.yml  morning-startup.yml  nightly-teardown.yml  playwright-tests.yml  terraform-test.yml  test.yml  up.yml
.roadmap/: ROADMAP.md
.roadmap/in_progress/grafana-observability/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/in_progress/load-testing/: PROGRESS_TRACKER.md  (+1 more)
docs/: index.html  observability-architecture.html  terraform-architecture.html  terraform-environments.html  terraform-operations.html  terraform-resources.html
durable-code-app/backend/: README.md  pyproject.toml
durable-code-app/frontend/: index.html  package-lock.json  package.json
infra/: CICD_README.md
infra/environments/: dev.tfvars
infra/observability/: docker-compose.yml  user-data.sh.tftpl
infra/scripts/: deploy-app.sh  workspace-deploy-runtime.sh  workspace-deploy.sh  workspace-destroy-base.sh  workspace-destroy-runtime.sh  workspace-destroy.sh  workspace-status.sh
load-testing/: Dockerfile  Dockerfile.browser  docker-compose.yml  pyproject.toml
load-testing/lib/: __init__.py  profile_loader.py  websocket_client.py
load-testing/locustfiles/: __init__.py  browser_users.py  http_users.py  mixed_users.py  websocket_users.py
load-testing/profiles/: load.yml  smoke.yml  soak.yml  stress.yml
scripts/: ci-cd-parity-check.sh  gh-watch-checks.sh  lint-and-request-fix.sh  lint-watch-dashboard.sh  test-docker-integration.sh
test/integration_test/: test_oscilloscope_playwright.py
tools/: .flake8
tools/design_linters/: cli.py
(+218 files in other folders)
