# Purpose: Python project metadata and dependency management for Locust load testing
# Scope: Load testing package configuration with Locust framework dependency and optional browser extras
# Overview: PEP 621 project configuration for the load testing package. Defines the project
#     metadata and runtime dependencies required for HTTP, WebSocket, and browser-based load testing
#     against the deployed application. Uses pip-installable format for containerized builds. Locust
#     provides the load testing framework with built-in web UI, statistics collection, and distributed
#     testing capabilities. Browser load testing uses the locust-plugins PlaywrightUser integration
#     as an optional dependency extra to keep the base image lightweight.
# Dependencies: Locust load testing framework, websockets library for WebSocket protocol support,
#     PyYAML for load profile parsing, optional locust-plugins[playwright] for browser testing
# Exports: Installable Python package for Docker container builds with optional browser extras
# Environment: Docker container via Dockerfile (HTTP/WS) or Dockerfile.browser (browser), targeting
#     deployed web instances
# Related: Dockerfile for HTTP/WS container, Dockerfile.browser for browser container, locustfiles/
#     for test scenarios, lib/ for shared utilities
# Implementation: PEP 621 project metadata with optional dependencies for browser load testing

[project]
name = "durable-code-load-testing"
version = "0.1.0"
description = "Locust load testing for the Durable Code application"
requires-python = ">=3.11"
dependencies = [
    "locust>=2.35.0",
    "websockets>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
browser = [
    "locust-plugins[playwright]>=4.5.0",
    "playwright>=1.40.0",
]
